# workingtitle

./: .gitignore  Cargo.toml  module.json
proto/: dispatch.proto  os_module.proto
testclient/: README.me  client.py  compile.py  dispatch_pb2.py  module.py  os_module_pb2.py
testclient/modules/testmodule/: module.json
testcore/: Cargo.toml
testcore/src/: build.rs  dispatch.rs  main.rs
testmodule/: Cargo.toml  exports.def
testmodule/.cargo/: config
testmodule/src/: build.rs  dispatch.rs  lib.rs  os_module.rs
