[package]
name = "testcore"
version = "0.1.0"
edition = "2021"
build = "src\\build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testmodule = { path = "../testmodule" }
bytes = "1.6.0"
lazy_static = "1.4.0"
prost = "0.12.4"
windows = { version = "0.54.0", features = [ 
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader"
]}

[build-dependencies]
prost-build = { version = "0.12.4" }