[package]
name = "testmodule"
version = "0.1.0"
edition = "2021"
build = "src\\build.rs"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
lazy_static = "1.4.0"
prost = "0.12.4"
windows = { version = "0.54.0", features = [ 
    "Win32_Foundation",
    "Win32_Storage_FileSystem"
]}

[build-dependencies]
prost-build = { version = "0.12.4" }
